# deckard

./: README.md  pyproject.toml
deckard/: __init__.py  core.py
tests/: test_core.py
