[tool.poetry]
name = "deckard"
version = "0.1.0"
description = "A pythonic playing card game library"
authors = ["Tom Waterman"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
